revert: v1.3.3 (#869)
* Revert "引入本地媒体扫描引擎与音乐融合，全面强化附件格式安全校验 (#862)"

This reverts commit d785e03c

* Revert "这个是测试好的，日志也写了 (#860)"

This reverts commit 237b966b

* Revert "修复 Windows 本地驱动挂载并完善可复现的一键打包流程 (#858)"

This reverts commit 30303bf31a1c3ae6adceba7795cad34e1e293b65.

* chore: 添加 .codebuddy 目录到 .gitignore

* chore: 更新 CHANGELOG 至 1.2.4

* fix(attachment): fsPath校验根据附件所属驱动remotePath放行本地驱动挂载目录

* docs: 更新 CHANGELOG

* chore: 升级版本至1.2.4

* style(console): 修复 RegularRuleEditDialog.vue prettier 格式警告

* feat(attachment): getStream支持redirect参数重定向到对象存储外部直链

* docs: 更新1.2.4版本CHANGELOG新增getStream重定向功能

* feat(web): 附件详情预览getStream默认追加redirect=true参数支持对象存储直链

* style(console): 修复 SubjectCollectDialog 多余括号的 prettier 警告

* style(attachment): getStream重定向状态码由307改为302

* fix(attachment): 默认启用重定向到外部直链

* style: 优化 AttachmentServiceImpl 代码格式

---------

Signed-off-by: chivehao <chivehao@ikaros.run>